--- a/uksl/uksl.csproj
+++ b/uksl/uksl.csproj
@@ -258,6 +258,10 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Home\Participant.cshtml" />
+    <Content Include="Views\Home\Regulation.cshtml" />
+    <Content Include="Views\Home\Statistic.cshtml" />
+    <Content Include="Views\Home\Step.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
