UCSL-1, UCSL-5, UCSL-6 (Регламенти - таби, Кабінет - редагування та поле Команда)

--- a/uksl/uksl.csproj
+++ b/uksl/uksl.csproj
@@ -240,6 +240,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="script\manage.js" />
+    <Content Include="script\regulation.js" />
     <Content Include="script\register.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -281,6 +282,7 @@
     <Content Include="Views\Home\Regulation.cshtml" />
     <Content Include="Views\Home\Statistic.cshtml" />
     <Content Include="Views\Home\Step.cshtml" />
+    <Content Include="Views\Home\Regulation - Copy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
