--- a/uksl/Web.config
+++ b/uksl/Web.config
@@ -20,6 +20,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <!--<customErrors mode="On"/>-->
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -36,9 +37,9 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-    <staticContent>
+    <!--<staticContent>
       <mimeMap fileExtension=".json" mimeType="application/json; charset=UTF-8" />
-    </staticContent>
+    </staticContent>-->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
