--- a/uksl/uksl.csproj
+++ b/uksl/uksl.csproj
@@ -207,6 +207,7 @@
     <Content Include="Content\data\vuz.xml" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\images\Dual_Ring-1s-16px.gif" />
+    <Content Include="Content\images\logo-alibaba.png" />
     <Content Include="Content\images\ui-icons_444444_256x240.png" />
     <Content Include="Content\images\ui-icons_555555_256x240.png" />
     <Content Include="Content\images\ui-icons_777620_256x240.png" />
@@ -216,6 +217,7 @@
     <Content Include="Content\jquery-ui.css" />
     <Content Include="Content\jquery-ui.structure.css" />
     <Content Include="Content\jquery-ui.theme.css" />
+    <Content Include="Content\news.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -240,6 +242,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="script\manage.js" />
+    <Content Include="script\news.js" />
     <Content Include="script\regulation.js" />
     <Content Include="script\register.js" />
     <Content Include="Web.config">
@@ -314,7 +317,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>59551</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
