--- a/uksl.DAL/uksl.DAL.csproj
+++ b/uksl.DAL/uksl.DAL.csproj
@@ -42,9 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Person.cs" />
+    <Compile Include="Entities\Region.cs" />
+    <Compile Include="Entities\Tournament.cs" />
+    <Compile Include="Entities\VMatch.cs" />
+    <Compile Include="Interfaces\IPersonRepository.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
+    <Compile Include="Interfaces\ITournamentRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\PersonRepo.cs" />
+    <Compile Include="Repositories\PersonRepository.cs" />
+    <Compile Include="Repositories\TournamentRepository.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
