--- a/uksl/script/Web.config
+++ b/uksl/script/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;initial catalog=uh1063488_db;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;initial catalog=uksldb;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-uksl-201800301.mdf;Initial Catalog=aspnet-uksl-201800301;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=93.190.46.34,33301;Initial Catalog=uh1063488_db;Integrated Security=false;User Id=uh1063488_user;Password=x81qj84SwW;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=93.190.46.34,33301;Initial Catalog=uh1063488_db;Integrated Security=false;User Id=uh1063488_user;Password=x81qj84SwW;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -37,15 +37,10 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-    <!--<staticContent>
+    <staticContent>
       <mimeMap fileExtension=".json" mimeType="application/json; charset=UTF-8" />
-    </staticContent>-->
-  <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </staticContent>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
